force-app/main/default/objects/cel_Campaign_Member_Status__c/cel_Campaign_Member_Status__c.object-meta.xml
<CustomObject>
    <label>Campaign Member Status</label>
    <nameField>
        <displayFormat>CMS-{000000}</displayFormat>
        <label>Campaign Member Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Member Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>