force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Activity_Validity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>cel_Activity_Validity_End_Date__c</fullName>
    <formula>cel_Campaign__r.cel_Activity_Validity_End_Date__c</formula>
    <label>Activity Validity End Date</label>
    <type>Date</type>
</CustomField>