force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Activity_Validity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cel_Activity_Validity_Start_Date__c</fullName>
    <formula>cel_Campaign__r.cel_activity_validity_start_date__c</formula>
    <label>Activity Validity Start Date</label>
    <type>Date</type>
</CustomField>