force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Campaign__c.field-meta.xml
<CustomField>
    <fullName>cel_Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Member Statuses</relationshipLabel>
    <relationshipName>Campaign_Member_Statuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>