force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>cel_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed</label>
    <type>Checkbox</type>
</CustomField>