force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Contact__c.field-meta.xml
<CustomField>
    <fullName>cel_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clienteling Action History (Contact)</relationshipLabel>
    <relationshipName>Campaign_Member_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>