force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Contacted__c.field-meta.xml
<CustomField>
    <fullName>cel_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacted</label>
    <type>Checkbox</type>
</CustomField>