force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>cel_Customer_Code__c</fullName>
    <formula>cel_Contact__r.Account.cel_ext_account_id__c</formula>
    <label>Customer Code</label>
    <type>Text</type>
</CustomField>