force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Direct_Sales__c.field-meta.xml
<CustomField>
    <fullName>cel_Direct_Sales__c</fullName>
    <label>Direct Sales (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>