force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Direct_Sales_locale__c.field-meta.xml
<CustomField>
    <fullName>cel_Direct_Sales_locale__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Direct Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>