force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_ext_account_id__c.field-meta.xml
<CustomField>
    <fullName>cel_ext_account_id__c</fullName>
    <description>Customer Code Céline</description>
    <externalId>true</externalId>
    <label>cel_ext_account_id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>