force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Invited__c.field-meta.xml
<CustomField>
    <fullName>cel_Invited__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Invited</label>
    <type>Checkbox</type>
</CustomField>