force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_local_Currency__c.field-meta.xml
<CustomField>
    <fullName>cel_local_Currency__c</fullName>
    <label>Local Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
                <default>true</default>
                <label>EUR</label>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>BHD</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>CZK</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>HKD</fullName>
            </value>
            <value>
                <fullName>IDR</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>KRW</fullName>
            </value>
            <value>
                <fullName>KWD</fullName>
            </value>
            <value>
                <fullName>MOP</fullName>
            </value>
            <value>
                <fullName>MYR</fullName>
            </value>
            <value>
                <fullName>QAR</fullName>
            </value>
            <value>
                <fullName>RON</fullName>
            </value>
            <value>
                <fullName>SAR</fullName>
            </value>
            <value>
                <fullName>SEK</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>THB</fullName>
            </value>
            <value>
                <fullName>TWD</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>