force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>cel_Member_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clienteling Action History (Customer)</relationshipLabel>
    <relationshipName>Campaign_Member_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>