force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>cel_Purchasing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchasing</label>
    <type>Checkbox</type>
</CustomField>