force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Res_w_dep__c.field-meta.xml
<CustomField>
    <fullName>cel_Res_w_dep__c</fullName>
    <label>Res w/ dep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>