force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Reswodep__c.field-meta.xml
<CustomField>
    <fullName>cel_Reswodep__c</fullName>
    <label>Res w/o dep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>