force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_ResWODep_Euro__c.field-meta.xml
<CustomField>
    <fullName>cel_ResWODep_Euro__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Res w/o dep (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>