force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_RTW__c.field-meta.xml
<CustomField>
    <fullName>cel_RTW__c</fullName>
    <label>RTW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>