force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Segment__c.field-meta.xml
<CustomField>
    <fullName>cel_Segment__c</fullName>
    <formula>cel_Contact__r.Account.cel_segment_value_label__c</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>