force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_Shoes__c.field-meta.xml
<CustomField>
    <fullName>cel_Shoes__c</fullName>
    <label>Shoes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>