force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_show_up__c.field-meta.xml
<CustomField>
    <fullName>cel_show_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>show-up</label>
    <type>Checkbox</type>
</CustomField>