force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_total_Transaction_Sales__c.field-meta.xml
<CustomField>
    <fullName>cel_total_Transaction_Sales__c</fullName>
    <defaultValue>0</defaultValue>
    <label>total Transaction Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>