force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_total_units__c.field-meta.xml
<CustomField>
    <fullName>cel_total_units__c</fullName>
    <formula>cel_ACC__c + cel_Bags__c + cel_RTW__c + cel_Shoes__c + cel_SLG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>