force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_TotalSales__c.field-meta.xml
<CustomField>
    <fullName>cel_TotalSales__c</fullName>
    <label>Total Sales (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>