force-app/main/default/objects/cel_Campaign_Member_Status__c/fields/cel_TotalSales_locale__c.field-meta.xml
<CustomField>
    <fullName>cel_TotalSales_locale__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Sales</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>