force-app/main/default/objects/cel_Campaign_Member_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>cel_Contact__c</columns>
    <columns>cel_Invited__c</columns>
    <columns>cel_Confirmed__c</columns>
    <columns>cel_show_up__c</columns>
    <columns>cel_Purchasing__c</columns>
    <columns>NAME</columns>
    <columns>cel_RTW__c</columns>
    <columns>cel_Shoes__c</columns>
    <columns>cel_Bags__c</columns>
    <columns>cel_SLG__c</columns>
    <columns>cel_ACC__c</columns>
    <columns>cel_Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>